--- a/index.html
+++ b/index.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <title>DSW Kevin Burbano</title>
 </head>
+
 <body>
-    <div style="text-align: center;">
-        <h1>Proyecto de sitio web 2021 I PERIODO 16-01</h1>
-    </div>
-    <div>
-        <h3>Kevin Burbano, Ingenieria en sistemas 07-02-2021</h3>
-    </div>
-    <div>
-        <p>
-            Celular: 317 378 56 58 <br>
-            E-mail: burbanokevin1997@gmail.com <br>
-            Pais: Colombia <br>
-            Ciudad: Cali
-        </p>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-12">
+                <div class="text-center">
+                    <h1>Proyecto de sitio web 2021 I PERIODO 16-01</h1>
+                </div>
+                <div class="mt-5">
+                    <h3>Kevin Burbano, Ingenieria en sistemas 07-02-2021</h3>
+                </div>
+                <div class="mt-3">
+                    <p>
+                        Celular: 317 378 56 58 <br>
+                        E-mail: burbanokevin1997@gmail.com <br>
+                        Pais: Colombia <br>
+                        Ciudad: Cali
+                    </p>
+                </div>
+                <a href="./src/fase_2/design.html" class="btn btn-primary">Fase 2</a>
+            </div>
+        </div>
     </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+    crossorigin="anonymous"></script>
 </html>
