--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 </div>
                 <a href="./src/fase_2/design.html" class="btn btn-primary">Fase 2</a>
                 <a href="./src/fase_3/index.html" class="btn btn-primary">Fase 3</a>
+                <a href="./src/fase_4/index.html" class="btn btn-primary">Fase 4</a>
             </div>
         </div>
     </div>
