--- a/src/fase_2/design.html
+++ b/src/fase_2/design.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" href="../resources/css/bootstrap/bootstrap.min.css">
     <title>Design Kevin Burbano</title>
 </head>
 
@@ -18,9 +17,7 @@
     </div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -29,8 +26,7 @@
                         <a class="nav-link active" aria-current="page" href="#home">Inicio</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Temas
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -39,8 +35,7 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Recursos digitales
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -50,8 +45,7 @@
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Aprendizaje
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -84,10 +78,7 @@
                     </div>
                     <div class="mt-2">
                         <p>
-                            El proposito de este sitio es brindar información, sobre los frameworks css y el
-                            posicionamiento web. Con información obtenida desde fuentes externas.
-                            Ilustrando asi a las personas que accedan al sitio sobre estos temas y brindando
-                            conocimientos nuevos.
+                            El proposito de este sitio es brindar información, sobre los frameworks css y el posicionamiento web. Con información obtenida desde fuentes externas. Ilustrando asi a las personas que accedan al sitio sobre estos temas y brindando conocimientos nuevos.
                         </p>
                     </div>
                 </div>
@@ -107,17 +98,9 @@
                     </div>
                     <div class="mt-2">
                         <p style="text-align: justify;">
-                            Los frameworks se utilizan en el ámbito de la programación de aplicaciones desde hace
-                            décadas. Recientemente han comenzado a utilizarse para programar y diseñar aplicaciones web,
-                            por lo que ya existen decenas de frameworks para CSS.
-
-                            Genéricamente, un framework es un conjunto de herramientas, librerías, convenciones y buenas
-                            prácticas que pretenden encapsular las tareas repetitivas en módulos genéricos fácilmente
-                            reutilizables.
-
-                            De la misma forma, un framework CSS es un conjunto de herramientas, hojas de estilos y
-                            buenas prácticas que permiten al diseñador web olvidarse de las tareas repetitivas para
-                            centrarse en los elementos únicos de cada diseño en los que puede aportar valor.
+                            Los frameworks se utilizan en el ámbito de la programación de aplicaciones desde hace décadas. Recientemente han comenzado a utilizarse para programar y diseñar aplicaciones web, por lo que ya existen decenas de frameworks para CSS. Genéricamente, un
+                            framework es un conjunto de herramientas, librerías, convenciones y buenas prácticas que pretenden encapsular las tareas repetitivas en módulos genéricos fácilmente reutilizables. De la misma forma, un framework CSS es un conjunto
+                            de herramientas, hojas de estilos y buenas prácticas que permiten al diseñador web olvidarse de las tareas repetitivas para centrarse en los elementos únicos de cada diseño en los que puede aportar valor.
                         </p>
                     </div>
                     <div class="mt-2">
@@ -126,9 +109,7 @@
                         </div>
                         <div>
                             <p>
-                                Eguiluz, J. Capítulo 5. Frameworks (CSS avanzado). Uniwebsidad.com. Retrieved 20
-                                February 2021, from <a href="https://uniwebsidad.com/libros/css-avanzado/capitulo-5"
-                                    target="_blank">https://uniwebsidad.com/libros/css-avanzado/capitulo-5</a>
+                                Eguiluz, J. Capítulo 5. Frameworks (CSS avanzado). Uniwebsidad.com. Retrieved 20 February 2021, from <a href="https://uniwebsidad.com/libros/css-avanzado/capitulo-5" target="_blank">https://uniwebsidad.com/libros/css-avanzado/capitulo-5</a>
                             </p>
                         </div>
                     </div>
@@ -143,17 +124,9 @@
                     </div>
                     <div class="mt-2">
                         <p style="text-align: justify;">
-                            El posicionamiento SEO (por sus siglas en inglés Search Engine Optimization) son un conjunto
-                            de técnicas que se aplican en una página web con el objetivo de mejorar su posición y su
-                            visibilidad en las páginas de resultados de los principales navegadores.
-
-                            En otras palabras, podemos definir el SEO como un proceso enfocado a situar una determinada
-                            página web en las primeras posiciones de los resultados de búsqueda ante una consulta
-                            específica de un usuario.
-
-                            Tambien podriamos definirlo como un conjunto de acciones orientadas a mejorar el
-                            posicionamiento de un sitio web en la
-                            lista de resultados de Google, Bing, u otros buscadores de internet.​
+                            El posicionamiento SEO (por sus siglas en inglés Search Engine Optimization) son un conjunto de técnicas que se aplican en una página web con el objetivo de mejorar su posición y su visibilidad en las páginas de resultados de los principales navegadores.
+                            En otras palabras, podemos definir el SEO como un proceso enfocado a situar una determinada página web en las primeras posiciones de los resultados de búsqueda ante una consulta específica de un usuario. Tambien podriamos definirlo
+                            como un conjunto de acciones orientadas a mejorar el posicionamiento de un sitio web en la lista de resultados de Google, Bing, u otros buscadores de internet.​
                         </p>
                     </div>
                     <div class="mt-2">
@@ -162,9 +135,8 @@
                         </div>
                         <div>
                             <p>
-                                Acibeiro, M. (2018). ¿Qué es el posicionamiento SEO y por qué es tan importante? - Blog.
-                                GoDaddy. Retrieved 20 February 2021, from
-                                <a href="https://es.godaddy.com/blog/que-es-posicionamiento-seo" target="_blank">https://es.godaddy.com/blog/que-es-posicionamiento-seo</a>                                
+                                Acibeiro, M. (2018). ¿Qué es el posicionamiento SEO y por qué es tan importante? - Blog. GoDaddy. Retrieved 20 February 2021, from
+                                <a href="https://es.godaddy.com/blog/que-es-posicionamiento-seo" target="_blank">https://es.godaddy.com/blog/que-es-posicionamiento-seo</a>
                             </p>
                         </div>
                     </div>
@@ -186,7 +158,7 @@
                     </div>
                     <div class="mt-3">
                         <img src="../assets/images/design.png" class="img-fluid" alt="">
-                    </div>                    
+                    </div>
                 </div>
             </div>
         </div>
@@ -210,8 +182,6 @@
         </div>
     </footer>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-    crossorigin="anonymous"></script>
+<script src="../resources/js/bootstrap/bootstrap.min.js"></script>
 
 </html>
